--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-material-kit",
-  "author": "Creative Tim https://www.creative-tim.com/",
+  "author": "Petipol Nilpao",
   "description": "Vue Material Kit",
   "version": "1.2.2",
   "private": true,
